fixing header dropdown, changing footer sections, fix rtl text

--- a/about.html
+++ b/about.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+﻿<!DOCTYPE HTML>
 <html lang="he" dir="rtl">
 
 <head>
@@ -146,11 +146,11 @@
 							<li><a href="about.html">אודות</a></li>
 							<li><a href="#">תחומי התמחות</a>
 								<ul class="sub-menu">
-									<li><a href="real-estate.html">נדלן</a></li>
+									<li><a href="enforcement.html">הוצאה לפועל</a></li>
+									<li><a href="real-estate.html">נדל"ן</a></li>
 									<li><a href="contracts.html">חוזים</a></li>
 									<li><a href="defamation-law.html">לשון הרע</a></li>
 									<li><a href="tort_law.html">נזיקין</a></li>
-									<li><a href="enforcement.html">הוצאה לפועל</a></li>
 								</ul>
 							</li>
 							<li><a href="blog.html">בלוג</a></li>
@@ -172,11 +172,11 @@
 								<li><a href=" about.html">אודות</a></li>
 					<li><a href="#">תחומי התמחות</a>
 						<ul class="sub-menu">
-							<li><a href="real-estate.html">נדלן</a></li>
+							<li><a href="enforcement.html">הוצאה לפועל</a></li>
+							<li><a href="real-estate.html">נדל"ן</a></li>
 							<li><a href="contracts.html">חוזים</a></li>
 							<li><a href="defamation-law.html">לשון הרע</a></li>
 							<li><a href="tort_law.html">נזיקין</a></li>
-							<li><a href="enforcement.html">הוצאה לפועל</a></li>
 						</ul>
 					</li>
 					<li><a href="blog.html">בלוג</a></li>
@@ -223,7 +223,7 @@
 	<!--==================================================-->
 	<!-- Start lawyer about Section -->
 	<!--==================================================-->
-	<div class="about-section style-four" style="direction: ltr;">
+	<section class="about-section style-four" style="direction: rtl; text-align: right;">
 		<div class="container">
 			<div class="row align-items-center">
 				<div class="col-lg-6 col-md-12">
@@ -236,32 +236,42 @@
 					<div class="lawyer-section-title business-profile">
 						<h1 class="about-border2">אודות עורכת דין</h1>
 						<h1> מעין דקל</h1>
-						<p class="about-pt"> מעין דקל עורכת דין מנוסה בעלת ניסיון עשיר של 20 שנים, בעבודה עם משרדי עורכי
-							דין המובלים בישראל, שכלל מתן שירות לעיריות ,
-							חברות ביטוח, בנקים, מכללות ורשות מקרקעי ישראל. הכרות מעמיקה עם לשכות הוצל"פ אשר מאפשרות לה
-							להעניק ידע מקצועי נרחב
-							ואפשרות רחבה של טיפול בגביית חובות. עורכת הדין משלמת יצירתיות משפטית ורגישות אנושית גבוה .
+						<p class="about-pt">
+							<strong>מעין דקל, עורכת דין מנוסה, בעלת ניסיון עשיר של למעלה מ-20 שנה</strong>
+							בתחום המשפט האזרחי, עם התמחות ייחודית ועמוקה בתחום ההוצאה לפועל. במהלך הקריירה שלה עבדה עם
+							משרדי עורכי הדין המובילים
+							בישראל, והעניקה שירותים משפטיים לעיריות, חברות ביטוח, בנקים, מוסדות אקדמיים ורשות מקרקעי
+							ישראל.
+						</p>
 
+						<p>
+							עו"ד דקל נחשבת לבעלת מומחיות יוצאת דופן בהוצאה לפועל ובגביית חובות, עם היכרות יסודית עם
+							לשכות ההוצל"פ השונות בארץ.
+							הידע שצברה מאפשר לה לבנות פתרונות משפטיים מדויקים ואפקטיביים, לטפל בתיקים מורכבים ולהשיג
+							תוצאות מיטביות עבור
+							לקוחותיה – הן בזירה הפרטית והן מול גופים מוסדיים.
 						</p>
-						<p> מעין דקל מאמינה שיטה של שקיפות מלאה ללקוחות ושאיפה למצוינות, ובדרכה המיוחדת מסייעת לכל
-							הלקוחות להתמודד עם משברים קשים
-							תוך שהיא משיגה עבורם תוצאות מיטביות גם שמדובר בטיפול בתיקים מורכבים.
 
+						<p>
+							מעבר למקצועיות המשפטית, עו"ד דקל שמה דגש מיוחד על יחס אישי, ליווי צמוד ושקיפות מלאה לאורך כל
+							שלבי הטיפול בתיק. כל
+							לקוח זוכה להקשבה, להסבר ברור ולתחושת ביטחון, גם במצבים משפטיים מאתגרים ומורכבים.
 						</p>
-						<p>הניסיון הרב של עורכת הדין מעין דקל מסייע לה להצליח לפתח אסטרטגיות מיוחדות עבור כל מקרה ובכך
-							מצליחה להביא לפתרון מעולה
-							עבור הלקוחות .תוך טיפול צמוד והסבר מלא.
-						</p>
+
+						<p>
+							בזכות שילוב בין ניסיון, רגישות אנושית וחשיבה משפטית יצירתית – מצליחה מעין דקל להוביל את
+							לקוחותיה לפתרונות מהירים
+							ויעילים, תוך שמירה על כבודם, זמנם וצרכיהם האישיים. </p>
 					</div>
 				</div>
 			</div>
 		</div>
-	</div>
+	</section>
 	<!--==================================================-->
 	<!-- End lawyer about Secton -->
 	<!--==================================================-->
 
-	<div class="about-section style-two">
+	<section class="about-section style-two" style="direction: rtl; text-align: right;">
 		<div class="container">
 			<div class="d-flex row-reverse about-bg ">
 				<div class="col-lg-6 col-md-12 hide-below-1000">
@@ -281,47 +291,37 @@
 					<div class="about-extra-single-box">
 						<div class="lawyer-section-title white">
 							<h1>פרופיל עסקי </h1>
-							<p> מעין דקל נחשבת אורטוריטה בעולם הוצאה לפועל אחרי ניסיון בטיפול תיקים של חייבים וזוכים מעל
-								ל20
-								שנים. שבהם צברה ניסיון
-								שבמהלכם ביצעה הסבות מורכבות של תיקי גבייה פעילים תוך מימושים מיוחדים. תוך טיפול בתיקים
-								מול
-								הלקוח במקצועיות ושקיפות מלאה.
-								והכל בכפוף להוראות החוק , התקנות ועדכוני הפסיקה בהמשך לרגולציה המשפטית המשתנה מידי יום.
-							</p>
 							<p>
-								טיפול מלא בכל תחום ייצוג דיירים, ונדל"ן לאחר ניהול תיקים במשך עשור שלם, בהם חלשה על
-								טיפול
-								בנכסי ירושה צווי ירושה
-								וצוואות, רכישה מכירה ושכירות של נכסי עסקים גדולים או נכסים פרטיים. תוך ניהול הליך בצמוד
-								ללקוחות.
-
+								עורכת הדין מעין דקל נחשבת לדמות בולטת ומוערכת בעולם ההוצאה לפועל, בעלת מוניטין של
+								למעלה מ-20 שנות ניסיון בטיפול
+								בתיקי חייבים וזוכים.
+								לאורך השנים צברה ניסיון מעשי עשיר, הכולל טיפול בתיקי גבייה מורכבים, ביצוע הסבות
+								משפטיות של תיקים פעילים, ומימושים
+								מיוחדים – הכול תוך הקפדה על ליווי אישי, מקצועי ושקוף ללקוחותיה.
 							</p>
-						</div>
-						<div class="row">
-							<div class="col-lg-6 col-md-6">
-								<div class="about-check-list">
-									<p> <i class="bi bi-check2"></i> שלווה נפלאה. </p>
-									<p> <i class="bi bi-check2"></i> מעל 350 חברים פעילים </p>
-								</div>
-							</div>
-							<div class="col-lg-6 col-md-6 pr-0">
-								<div class="about-check-list">
-									<p> <i class="bi bi-check2"></i> פתרון קל ומהיר </p>
-									<p> <i class="bi bi-check2"></i> שירותים משפטיים מקצועיים </p>
-								</div>
-							</div>
+
+							<p>
+								עבודתה של עו"ד דקל מתבצעת בקפדנות ובהתאם להוראות החוק, התקנות ועדכוני הפסיקה – כל
+								זאת על רקע רגולציה משפטית דינאמית
+								ומשתנה.
+								ניסיונה הרב מאפשר לה להעניק שירות משפטי מדויק ואפקטיבי, לצד הבנה עמוקה של המערכת
+								המשפטית והפרוצדורלית בתחום ההוצאה
+								לפועל.
+							</p>
+
+							<p>
+								בנוסף, לעו"ד דקל ניסיון עשיר בניהול תיקים בתחום ייצוג דיירים ונדל"ן – תחום בו היא
+								פועלת מזה עשור.
+								היא מעניקה טיפול כוללני בכל שלבי העסקה, לרבות ניהול תיקי ירושה, צווי ירושה וצוואות,
+								רכישה, מכירה והשכרה של נכסי
+								נדל"ן – הן פרטיים והן מסחריים.
+								כל תיק מלווה בליווי אישי וצמוד, מתוך הבנה מעמיקה של צורכי הלקוח וחתירה לפתרון מיטבי.
+							</p>
 						</div>
 					</div>
-					<!-- lawyer button -->
-					<!-- <div class="lawyer-button">
-							<a href="about.html"> Discover More <i class="bi bi-arrow-right"></i> </a>
-						</div> -->
 				</div>
 			</div>
-		</div>
-	</div>
-	</div>
+	</section>
 
 
 	<!--==================================================-->
@@ -364,11 +364,11 @@
 						<h4 class="widget-title"> תחומי התמחות </h4>
 						<div class="menu-quick-link-content">
 							<ul class="footer-widget-list">
-								<li><a href="real-estate.html">נדלן</a></li>
+								<li><a href="enforcement.html">הוצאה לפועל</a></li>
+								<li><a href="real-estate.html">נדל"ן</a></li>
 								<li><a href="contracts.html">חוזים</a></li>
 								<li><a href="defamation-law.html">לשון הרע</a></li>
 								<li><a href="tort_law.html">נזיקין</a></li>
-								<li><a href="enforcement.html">הוצאה לפועל</a></li>
 							</ul>
 						</div>
 					</div>
@@ -380,9 +380,6 @@
 						<div class="menu-quick-link-content">
 							<ul class="footer-widget-list">
 								<li><a href="#"> בקרוב... </a></li>
-								<!-- <li><a href="#"> Privacy Policy </a></li>
-								<li><a href="#"> Complaints Policy </a></li>
-								<li><a class="border1" href="#"> FAQ </a></li> -->
 							</ul>
 						</div>
 					</div>
@@ -403,9 +400,13 @@
 						</div>
 						<!-- footer desc -->
 						<div class="footer-contact-desc">
-							<p>משרד עורכי דין מעין דקל ושות' מתמחה במתן ייעוץ משפטי מקיף ושלם בתחומים רבים. לרבות, הוצאה
+							<p>משרד עורכי דין מעין דקל ושות' מתמחה במתן ייעוץ משפטי מקיף ושלם בתחומים רבים.
+								לרבות,
+								הוצאה
 								לפועל בתיקי חייבים וזוכים,
-								מזונות, משפט אזרחי, חוזים והסכמים, בתחומי הנדל"ן רכישה ומכירת נכסים, השכרת נכסים, ייצוג
+								מזונות, משפט אזרחי, חוזים והסכמים, בתחומי הנדל"ן רכישה ומכירת נכסים, השכרת
+								נכסים,
+								ייצוג
 								דיירים בפרוייקט תמ"א 38 ,פינוי
 								בינוי, תביעות לשון הרע, ותביעות נזקי רכוש.</p>
 						</div>
@@ -432,10 +433,6 @@
 	<!--==================================================-->
 	<!-- End lawyer Footer Section -->
 	<!--==================================================-->
-
-
-
-
 
 	<!--==================================================-->
 	<!-- Start scrollup section Area -->
