--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+﻿<!DOCTYPE HTML>
 <html lang="he" dir="rtl">
 
 <head>
@@ -84,7 +84,8 @@
 							<li><a href="about.html">אודות</a></li>
 							<li><a href="#">תחומי התמחות</a>
 								<ul class="sub-menu">
-									<li><a href="real-estate.html">נדלן</a></li>
+									<li><a href="enforcement.html">הוצאה לפועל</a></li>
+									<li><a href="real-estate.html">נדל"ן</a></li>
 									<li><a href="contracts.html">חוזים</a></li>
 									<li><a href="defamation-law.html">לשון הרע</a></li>
 									<li><a href="tort_law.html">נזיקין</a></li>
@@ -109,11 +110,11 @@
 								<li><a href=" about.html">אודות</a></li>
 					<li><a href="#">תחומי התמחות</a>
 						<ul class="sub-menu">
-							<li><a href="real-estate.html">נדלן</a></li>
+							<li><a href="enforcement.html">הוצאה לפועל</a></li>
+							<li><a href="real-estate.html">נדל"ן</a></li>
 							<li><a href="contracts.html">חוזים</a></li>
 							<li><a href="defamation-law.html">לשון הרע</a></li>
 							<li><a href="tort_law.html">נזיקין</a></li>
-							<li><a href="enforcement.html">הוצאה לפועל</a></li>
 						</ul>
 					</li>
 					<li><a href="blog.html">בלוג</a></li>
@@ -254,51 +255,57 @@
 					</div>
 				</div>
 			</div>
-			<div class="row">
-				<div class="col-lg-4 col-md-6">
-					<div class="contact-information2">
-						<div class="contacts-icon">
-							<i class="bi bi-telephone"></i>
+			<div class="row justify-content-center">
+				<div class="col-lg-8 col-md-10">
+					<div class="contact-info-wrapper"
+						style="display: flex; flex-direction: column; gap: 30px; align-items: center;">
+						<!-- Phone -->
+						<div class="contact-info-item"
+							style="display: flex; align-items: center; width: 100%; background: #f9f9f9; border-radius: 10px; padding: 20px; box-shadow: 0 3px 10px rgba(0,0,0,0.05);">
+							<div class="contact-icon"
+								style="font-size: 30px; margin-left: 20px; background: #eecd95; width: 60px; height: 60px; display: flex; align-items: center; justify-content: center; border-radius: 50%;">
+								<i class="bi bi-telephone" style="color: #fff;"></i>
+							</div>
+							<div class="contact-content" style="text-align: right;">
+								<h5 style="font-weight: 600; margin-bottom: 5px;">טלפון</h5>
+								<h6 style="font-size: 18px; font-weight: 500; color: #333;">050-7526885</h6>
+							</div>
 						</div>
-						<div class="contacts-title">
-							<h5>טלפון</h5>
-							<h6>050-7526885</h6>
+
+						<!-- Email -->
+						<div class="contact-info-item"
+							style="display: flex; align-items: center; width: 100%; background: #f9f9f9; border-radius: 10px; padding: 20px; box-shadow: 0 3px 10px rgba(0,0,0,0.05);">
+							<div class="contact-icon"
+								style="font-size: 30px; margin-left: 20px; background: #eecd95; width: 60px; height: 60px; display: flex; align-items: center; justify-content: center; border-radius: 50%;">
+								<i class="bi bi-envelope-fill" style="color: #fff;"></i>
+							</div>
+							<div class="contact-content" style="text-align: right;">
+								<h5 style="font-weight: 600; margin-bottom: 5px;">אימייל</h5>
+								<h6 style="font-size: 18px; font-weight: 500; color: #333;">dekellaw2024@gmail.com</h6>
+							</div>
 						</div>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-6">
-					<div class="contact-information2">
-						<div class="contacts-icon upper">
-							<i class="bi bi-envelope-fill"></i>
-						</div>
-						<div class="contacts-title">
-							<h5>אימייל</h5>
-							<h6>info@lawyermaanyan.co.il</h6>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-6">
-					<div class="contact-information2">
-						<div class="contacts-icon upper2">
-							<i class="bi bi-geo-alt-fill"></i>
-						</div>
-						<div class="contacts-title">
-							<h5>כתובת המשרד</h5>
-							<h6>השחם 1, פתח תקווה</h6>
+
+						<!-- Address -->
+						<div class="contact-info-item"
+							style="display: flex; align-items: center; width: 100%; background: #f9f9f9; border-radius: 10px; padding: 20px; box-shadow: 0 3px 10px rgba(0,0,0,0.05);">
+							<div class="contact-icon"
+								style="font-size: 30px; margin-left: 20px; background: #eecd95; width: 60px; height: 60px; display: flex; align-items: center; justify-content: center; border-radius: 50%;">
+								<i class="bi bi-geo-alt-fill" style="color: #fff;"></i>
+							</div>
+							<div class="contact-content" style="text-align: right;">
+								<h5 style="font-weight: 600; margin-bottom: 5px;">כתובת המשרד</h5>
+								<h6 style="font-size: 18px; font-weight: 500; color: #333;">השחם 1, פתח תקווה</h6>
+							</div>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
+	</div>
 	<!--==================================================-->
 	<!-- End lawyern Contac Inf Section -->
 	<!--==================================================-->
-
-
-
-
-
 
 	<!--==================================================-->
 	<!-- Start lawyer Footer Section -->
@@ -311,22 +318,25 @@
 						<!-- lawyer logo -->
 						<div class="lawyer-logo">
 							<a class="logo_img" href="index.html" title="techno">
-								<img src="assets/images/logo.png" alt="" />
+								<img src="assets/images/LawyerMaayanLogo.svg" alt="Logo" />
+								<h3 style="color:#eecd95;"> עו"ד מעין דקל </h3>
+								<h4 style="color:#eecd95;">MAYAN DEKEL LAW OFFICE</h4>
 							</a>
 						</div>
 						<!-- company desc info -->
 						<div class="company-desc-info">
-							<p> <i class="bi bi-telephone"></i> טלפון: 050-7526885 </p>
-							<p> <i class="bi bi-envelope-fill"></i> אימייל: info@lawyermaanyan.co.il </p>
-							<p> <i class="bi bi-geo-alt-fill"></i> השחם 1, פתח תקווה </p>
+							<p> <i class="bi bi-telephone"></i>050-7526885 </p>
+							<p> <i class="bi bi-envelope-fill"></i>dekellaw2024@gmail.com </p>
+							<p> <i class="bi bi-geo-alt-fill"></i> השחם 1, פתח תקווה</p>
 						</div>
 						<!-- company social info -->
 						<div class="company-social-info">
 							<ul>
 								<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-								<li><a href="#"><i class="fab fa-twitter"></i></a></li>
-								<li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-								<li><a href="#"><i class="fab fa-pinterest-p"></i></a></li>
+								<!-- <li><a href="#"><i class="fab fa-twitter"></i></a></li> -->
+								<li><a target="_blank" href="https://www.linkedin.com/in/mayan-dekel-938297344/"><i
+											class="fab fa-linkedin-in"></i></a></li>
+								<!-- <li><a href="#"><i class="fab fa-pinterest-p"></i></a></li> -->
 							</ul>
 						</div>
 					</div>
@@ -334,13 +344,14 @@
 				<div class="col-lg-3 col-md-6 pl-30">
 					<div class="widget-nav-menu">
 						<!-- widget title -->
-						<h4 class="widget-title">שירותים</h4>
+						<h4 class="widget-title"> תחומי התמחות </h4>
 						<div class="menu-quick-link-content">
 							<ul class="footer-widget-list">
-								<li><a href="#">נדל"ן</a></li>
-								<li><a href="#">חוזים</a></li>
-								<li><a href="#">לשון הרע</a></li>
-								<li><a class="border1" href="#">נזיקין</a></li>
+								<li><a href="enforcement.html">הוצאה לפועל</a></li>
+								<li><a href="real-estate.html">נדל"ן</a></li>
+								<li><a href="contracts.html">חוזים</a></li>
+								<li><a href="defamation-law.html">לשון הרע</a></li>
+								<li><a href="tort_law.html">נזיקין</a></li>
 							</ul>
 						</div>
 					</div>
@@ -348,13 +359,10 @@
 				<div class="col-lg-3 col-md-6">
 					<div class="widget-nav-menu">
 						<!-- widget title -->
-						<h4 class="widget-title">קישורים</h4>
+						<h4 class="widget-title">בלוג והרצאות </h4>
 						<div class="menu-quick-link-content">
 							<ul class="footer-widget-list">
-								<li><a href="#">תנאי שימוש</a></li>
-								<li><a href="#">מדיניות פרטיות</a></li>
-								<li><a href="#">מדיניות תלונות</a></li>
-								<li><a class="border1" href="#">שאלות נפוצות</a></li>
+								<li><a href="#"> בקרוב... </a></li>
 							</ul>
 						</div>
 					</div>
@@ -362,7 +370,7 @@
 				<div class="col-lg-3 col-md-6">
 					<div class="widget-nav-menu">
 						<!-- widget title -->
-						<h4 class="widget-title">צור קשר</h4>
+						<h4 class="widget-title"> צור קשר </h4>
 						<div class="menu-quick-link-contact">
 							<!-- contact icon -->
 							<div class="footer-contact-icon">
@@ -375,23 +383,30 @@
 						</div>
 						<!-- footer desc -->
 						<div class="footer-contact-desc">
-							<p>משרד עורכי דין מעיין דקל מספק שירותי ייעוץ משפטי מקצועי. אנא פנו אלינו לקבלת מידע נוסף או
-								לקביעת פגישת ייעוץ.</p>
+							<p>משרד עורכי דין מעין דקל ושות' מתמחה במתן ייעוץ משפטי מקיף ושלם בתחומים רבים.
+								לרבות,
+								הוצאה
+								לפועל בתיקי חייבים וזוכים,
+								מזונות, משפט אזרחי, חוזים והסכמים, בתחומי הנדל"ן רכישה ומכירת נכסים, השכרת
+								נכסים,
+								ייצוג
+								דיירים בפרוייקט תמ"א 38 ,פינוי
+								בינוי, תביעות לשון הרע, ותביעות נזקי רכוש.</p>
 						</div>
 					</div>
 				</div>
 			</div>
 			<div class="row footer-bottom-bg">
-				<div class="col-lg-6 col-md-6 pl-0">
+				<div class="col-lg-6 col-md-6 pl-0 footer-all-rights">
 					<div class="footer-bottom-content-copy">
-						<p>כל הזכויות שמורות © 2023 למשרד עורכי דין מעיין דקל</p>
+						<p>© כל הזכויות שמורות למעין דקל ושות׳ - משרד עורכי דין </p>
 					</div>
 				</div>
 				<div class="col-lg-6 col-md-6 pr-0">
 					<div class="footer-bottom-menu text-right">
 						<ul>
-							<li><a href="#">מדיניות פרטיות</a></li>
-							<li><a href="#">הסכם משפטי</a></li>
+							<li><a href="privacy-policy.html">מדיניות פרטיות</a></li>
+							<li><a href="legal-agreement.html">הסכם משפטי</a></li>
 						</ul>
 					</div>
 				</div>
@@ -401,9 +416,6 @@
 	<!--==================================================-->
 	<!-- End lawyer Footer Section -->
 	<!--==================================================-->
-
-
-
 
 
 	<!--==================================================-->
