--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+﻿<!DOCTYPE HTML>
 <html lang="he" dir="rtl">
 
 <head>
@@ -106,7 +106,8 @@
                             <li><a href="about.html">אודות</a></li>
                             <li><a href="#">תחומי התמחות</a>
                                 <ul class="sub-menu">
-                                    <li><a href="real-estate.html">נדלן</a></li>
+                                    <li><a href="enforcement.html">הוצאה לפועל</a></li>
+                                    <li><a href="real-estate.html">נדל"ן</a></li>
                                     <li><a href="contracts.html">חוזים</a></li>
                                     <li><a href="defamation-law.html">לשון הרע</a></li>
                                     <li><a href="tort_law.html">נזיקין</a></li>
@@ -129,11 +130,11 @@
 								<li><a href=" about.html">אודות</a></li>
                     <li><a href="#">תחומי התמחות</a>
                         <ul class="sub-menu">
-                            <li><a href="real-estate.html">נדלן</a></li>
+                            <li><a href="enforcement.html">הוצאה לפועל</a></li>
+                            <li><a href="real-estate.html">נדל"ן</a></li>
                             <li><a href="contracts.html">חוזים</a></li>
                             <li><a href="defamation-law.html">לשון הרע</a></li>
                             <li><a href="tort_law.html">נזיקין</a></li>
-                            <li><a href="enforcement.html">הוצאה לפועל</a></li>
                         </ul>
                     </li>
                     <li><a href="blog.html">בלוג</a></li>
@@ -296,16 +297,17 @@
                         </div>
                         <!-- company desc info -->
                         <div class="company-desc-info">
-                            <p> <i class="bi bi-telephone"></i> Phone: 050-7526885 </p>
-                            <p> <i class="bi bi-envelope-fill"></i> Email: dekellaw2024@gmail.com </p>
-                            <p> <i class="bi bi-geo-alt-fill"></i> השחם 1, פתח תקווה </p>
+                            <p> <i class="bi bi-telephone"></i>050-7526885 </p>
+                            <p> <i class="bi bi-envelope-fill"></i>dekellaw2024@gmail.com </p>
+                            <p> <i class="bi bi-geo-alt-fill"></i> השחם 1, פתח תקווה</p>
                         </div>
                         <!-- company social info -->
                         <div class="company-social-info">
                             <ul>
                                 <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
                                 <!-- <li><a href="#"><i class="fab fa-twitter"></i></a></li> -->
-                                <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+                                <li><a target="_blank" href="https://www.linkedin.com/in/mayan-dekel-938297344/"><i
+                                            class="fab fa-linkedin-in"></i></a></li>
                                 <!-- <li><a href="#"><i class="fab fa-pinterest-p"></i></a></li> -->
                             </ul>
                         </div>
@@ -317,7 +319,8 @@
                         <h4 class="widget-title"> תחומי התמחות </h4>
                         <div class="menu-quick-link-content">
                             <ul class="footer-widget-list">
-                                <li><a href="real-estate.html">נדלן</a></li>
+                                <li><a href="enforcement.html">הוצאה לפועל</a></li>
+                                <li><a href="real-estate.html">נדל"ן</a></li>
                                 <li><a href="contracts.html">חוזים</a></li>
                                 <li><a href="defamation-law.html">לשון הרע</a></li>
                                 <li><a href="tort_law.html">נזיקין</a></li>
@@ -332,9 +335,6 @@
                         <div class="menu-quick-link-content">
                             <ul class="footer-widget-list">
                                 <li><a href="#"> בקרוב... </a></li>
-                                <!-- <li><a href="#"> Privacy Policy </a></li>
-								<li><a href="#"> Complaints Policy </a></li>
-								<li><a class="border1" href="#"> FAQ </a></li> -->
                             </ul>
                         </div>
                     </div>
@@ -355,9 +355,13 @@
                         </div>
                         <!-- footer desc -->
                         <div class="footer-contact-desc">
-                            <p>משרד עורכי דין מעין דקל ושות' מתמחה במתן ייעוץ משפטי מקיף ושלם בתחומים רבים. לרבות, הוצאה
+                            <p>משרד עורכי דין מעין דקל ושות' מתמחה במתן ייעוץ משפטי מקיף ושלם בתחומים רבים.
+                                לרבות,
+                                הוצאה
                                 לפועל בתיקי חייבים וזוכים,
-                                מזונות, משפט אזרחי, חוזים והסכמים, בתחומי הנדל"ן רכישה ומכירת נכסים, השכרת נכסים, ייצוג
+                                מזונות, משפט אזרחי, חוזים והסכמים, בתחומי הנדל"ן רכישה ומכירת נכסים, השכרת
+                                נכסים,
+                                ייצוג
                                 דיירים בפרוייקט תמ"א 38 ,פינוי
                                 בינוי, תביעות לשון הרע, ותביעות נזקי רכוש.</p>
                         </div>
@@ -365,7 +369,7 @@
                 </div>
             </div>
             <div class="row footer-bottom-bg">
-                <div class="col-lg-6 col-md-6 pl-0">
+                <div class="col-lg-6 col-md-6 pl-0 footer-all-rights">
                     <div class="footer-bottom-content-copy">
                         <p>© כל הזכויות שמורות למעין דקל ושות׳ - משרד עורכי דין </p>
                     </div>
