--- a/tort_law.html
+++ b/tort_law.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+﻿<!DOCTYPE HTML>
 <html lang="he" dir="rtl">
 
 <head>
@@ -77,7 +77,8 @@
                             <li><a href="about.html">אודות</a></li>
                             <li><a href="#">תחומי התמחות</a>
                                 <ul class="sub-menu">
-                                    <li><a href="real-estate.html">נדלן</a></li>
+                                    <li><a href="enforcement.html">הוצאה לפועל</a></li>
+                                    <li><a href="real-estate.html">נדל"ן</a></li>
                                     <li><a href="contracts.html">חוזים</a></li>
                                     <li><a href="defamation-law.html">לשון הרע</a></li>
                                     <li><a href="tort_law.html">נזיקין</a></li>
@@ -100,11 +101,11 @@
 								<li><a href=" about.html">אודות</a></li>
                     <li><a href="#">תחומי התמחות</a>
                         <ul class="sub-menu">
-                            <li><a href="real-estate.html">נדלן</a></li>
+                            <li><a href="enforcement.html">הוצאה לפועל</a></li>
+                            <li><a href="real-estate.html">נדל"ן</a></li>
                             <li><a href="contracts.html">חוזים</a></li>
                             <li><a href="defamation-law.html">לשון הרע</a></li>
                             <li><a href="tort_law.html">נזיקין</a></li>
-                            <li><a href="enforcement.html">הוצאה לפועל</a></li>
                         </ul>
                     </li>
                     <li><a href="blog.html">בלוג</a></li>
@@ -194,70 +195,7 @@
     <!-- End lawyer about Secton -->
     <!--==================================================-->
 
-    <!--==================================================-->
-    <!-- Start lawyer bussiness profile Section -->
-    <!--==================================================-->
-    <div class="about-section style-three">
-        <div class="container">
-            <div class="row about-bg align-items-center row-reverse">
-                <div class="col-lg-6 col-md-12">
-                    <!-- about thumb -->
-                    <div class="about-thumb2 business-profile">
-                        <img src="assets/images/resource/about3.jpg" alt="">
-                        <!-- about counter -->
-                        <div class="about-counter">
-                            <div class="about-counter-title">
-                                <h3 class="counter">25</h3>
-                                <h6>שנות ניסיון</h6>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-6 col-md-12 pl-35">
-                    <div class="lawyer-section-title">
-                        <h1>פרופיל עסקי </h1>
-                        <p> מעין דקל נחשבת אורטוריטה בעולם הוצאה לפועל אחרי ניסיון בטיפול תיקים של חייבים וזוכים מעל ל20
-                            שנים. שבהם צברה ניסיון
-                            שבמהלכם ביצעה הסבות מורכבות של תיקי גבייה פעילים תוך מימושים מיוחדים. תוך טיפול בתיקים מול
-                            הלקוח במקצועיות ושקיפות מלאה.
-                            והכל בכפוף להוראות החוק , התקנות ועדכוני הפסיקה בהמשך לרגולציה המשפטית המשתנה מידי יום.
-                        </p>
-                        <p>
-                            טיפול מלא בכל תחום ייצוג דיירים, ונדל"ן לאחר ניהול תיקים במשך עשור שלם, בהם חלשה על טיפול
-                            בנכסי ירושה צווי ירושה
-                            וצוואות, רכישה מכירה ושכירות של נכסי עסקים גדולים או נכסים פרטיים. תוך ניהול הליך בצמוד
-                            ללקוחות.
 
-                        </p>
-                    </div>
-                    <div class="row">
-                        <div class="col-lg-6 col-md-6">
-                            <div class="about-items">
-                                <!-- about items content -->
-                                <div class="about-items-content">
-                                    <h6><i class="bi bi-check2"></i> החזון שלנו</h6>
-                                    <p> להגן על זכויות הלקוחות ולספק שירות משפטי איכותי ואישי לכל פונה. </p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-6 col-md-6 pr-0">
-                            <div class="about-items">
-                                <!-- about items content -->
-                                <div class="about-items-content">
-                                    <h6><i class="bi bi-check2"></i> הערכים שלנו</h6>
-                                    <p> אמינות, מקצועיות, יושרה ושירות אישי - הם הערכים שמנחים אותנו בעבודתנו היומיומית.
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!--==================================================-->
-    <!-- End lawyer about Secton -->
-    <!--==================================================-->
     <!--==================================================-->
     <!-- Start lawyer Footer Section -->
     <!--==================================================-->
@@ -276,16 +214,17 @@
                         </div>
                         <!-- company desc info -->
                         <div class="company-desc-info">
-                            <p> <i class="bi bi-telephone"></i> Phone: 050-7526885 </p>
-                            <p> <i class="bi bi-envelope-fill"></i> Email: dekellaw2024@gmail.com </p>
-                            <p> <i class="bi bi-geo-alt-fill"></i> השחם 1, פתח תקווה </p>
+                            <p> <i class="bi bi-telephone"></i>050-7526885 </p>
+                            <p> <i class="bi bi-envelope-fill"></i>dekellaw2024@gmail.com </p>
+                            <p> <i class="bi bi-geo-alt-fill"></i> השחם 1, פתח תקווה</p>
                         </div>
                         <!-- company social info -->
                         <div class="company-social-info">
                             <ul>
                                 <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
                                 <!-- <li><a href="#"><i class="fab fa-twitter"></i></a></li> -->
-                                <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+                                <li><a target="_blank" href="https://www.linkedin.com/in/mayan-dekel-938297344/"><i
+                                            class="fab fa-linkedin-in"></i></a></li>
                                 <!-- <li><a href="#"><i class="fab fa-pinterest-p"></i></a></li> -->
                             </ul>
                         </div>
@@ -297,7 +236,8 @@
                         <h4 class="widget-title"> תחומי התמחות </h4>
                         <div class="menu-quick-link-content">
                             <ul class="footer-widget-list">
-                                <li><a href="real-estate.html">נדלן</a></li>
+                                <li><a href="enforcement.html">הוצאה לפועל</a></li>
+                                <li><a href="real-estate.html">נדל"ן</a></li>
                                 <li><a href="contracts.html">חוזים</a></li>
                                 <li><a href="defamation-law.html">לשון הרע</a></li>
                                 <li><a href="tort_law.html">נזיקין</a></li>
@@ -312,9 +252,6 @@
                         <div class="menu-quick-link-content">
                             <ul class="footer-widget-list">
                                 <li><a href="#"> בקרוב... </a></li>
-                                <!-- <li><a href="#"> Privacy Policy </a></li>
-								<li><a href="#"> Complaints Policy </a></li>
-								<li><a class="border1" href="#"> FAQ </a></li> -->
                             </ul>
                         </div>
                     </div>
@@ -335,9 +272,13 @@
                         </div>
                         <!-- footer desc -->
                         <div class="footer-contact-desc">
-                            <p>משרד עורכי דין מעין דקל ושות' מתמחה במתן ייעוץ משפטי מקיף ושלם בתחומים רבים. לרבות, הוצאה
+                            <p>משרד עורכי דין מעין דקל ושות' מתמחה במתן ייעוץ משפטי מקיף ושלם בתחומים רבים.
+                                לרבות,
+                                הוצאה
                                 לפועל בתיקי חייבים וזוכים,
-                                מזונות, משפט אזרחי, חוזים והסכמים, בתחומי הנדל"ן רכישה ומכירת נכסים, השכרת נכסים, ייצוג
+                                מזונות, משפט אזרחי, חוזים והסכמים, בתחומי הנדל"ן רכישה ומכירת נכסים, השכרת
+                                נכסים,
+                                ייצוג
                                 דיירים בפרוייקט תמ"א 38 ,פינוי
                                 בינוי, תביעות לשון הרע, ותביעות נזקי רכוש.</p>
                         </div>
@@ -345,7 +286,7 @@
                 </div>
             </div>
             <div class="row footer-bottom-bg">
-                <div class="col-lg-6 col-md-6 pl-0">
+                <div class="col-lg-6 col-md-6 pl-0 footer-all-rights">
                     <div class="footer-bottom-content-copy">
                         <p>© כל הזכויות שמורות למעין דקל ושות׳ - משרד עורכי דין </p>
                     </div>
@@ -365,9 +306,6 @@
     <!-- End lawyer Footer Section -->
     <!--==================================================-->
 
-
-
-
     <!--==================================================-->
     <!-- Start scrollup section Area -->
     <!--==================================================-->
@@ -385,8 +323,6 @@
     <!--==================================================-->
     <!-- Start scrollup section Area -->
     <!--==================================================-->
-
-
 
 
     <!-- jquery js -->
